--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 
   </head>
   <body>
+    <div class="help_area">
+	<div class="help_icon">?</div>
+	    <div class="tooltip">
+			■凡例<br>
+	        W 上に移動<br>
+	        S 下に移動<br>
+	        A 左に移動<br>
+            D 右に移動<br>
+            バグ技があります。RTAガチ勢は頑張ってください。<br>
+            ただし、ミスるとデータ吹き飛びます。<br>
+            リロード注意<br>
+	    </div>
+    </div>
+
     <script src="sketch.js"></script>
   
 
