--- a/index.html
+++ b/index.html
@@ -20,7 +20,32 @@
             リロード注意<br>
 	    </div>
     </div>
-
+	  <style>
+.help_area {
+	position:relative;
+}
+.help_icon {
+	border-radius:50%;
+	width:20px;
+	height:20px;
+	line-height:20px;
+	vertical-align:middle;
+	font-size:12px;
+	text-align:center;
+	background-color:#888888;
+	color:white;
+	cursor:pointer;
+}
+.tooltip {
+	position:absolute;
+	background-color:rgba(0,0,0,0.5);;
+	color:white;
+	border-radius:0.3em;
+	padding:0.3em;
+	margin:0.3em 0 0 1em;
+	display:none;
+}
+</style>
     <script src="sketch.js"></script>
   
 
