--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   </head>
   <body>
-    <div class="help_area">
+    /*<div class="help_area">
 	<div class="help_icon">?</div>
 	    <div class="tooltip">
 			■凡例<br>
@@ -19,7 +19,7 @@
             ただし、ミスるとデータ吹き飛びます。<br>
             リロード注意<br>
 	    </div>
-    </div>
+    </div>*/
     <script src="sketch.js"></script>
   
 
