--- a/cresits.html
+++ b/cresits.html
@@ -1,5 +1,13 @@
 <html>
-<head><title>クルスク</title></head>
+<head>
+  <title>クルスク</title>
+  <style>
+    body{
+    background-color : black;
+    color : white;
+    }
+  </style>
+  </head>
 <body>
 <t1>＜Cresits＞</t1>
 <p>tools</p>
