--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   </head>
   <body>
+    <button onclick=window.open(https://endonian92.github.io/help.html);><>
     <script src="sketch.js"></script>
   
 
