--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
   </head>
   <body>
-    <button onclick=window.open(https://endonian92.github.io/help.html);><>
+    <button onclick=window.open(https://endonian92.github.io/help.html);></button>
+    <script>function Help(){
+            var window = window.open(https://endonian92.github.io/help.html);
+        }
+      </script>
     <script src="sketch.js"></script>
   
 
