--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <title>スターリングラード</title>
+    <style>
+    body{
+        background-color : #00f0fa;
+    </style>
 
   </head>
   <body>
