--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   </head>
   <body>
-    <button onclick=Help()>Help</button>
+    <input type="button" value="Help" onClick="Help()">
     <script>function Help(){
             var window = window.open(https://endonian92.github.io/help.html);
         }
