--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <input type="button" value="Help" onClick="Help()">
     <script>function Help(){
-            var window = window.open(https://endonian92.github.io/help.html);
+            window.open(https://endonian92.github.io/help.html);
         }
       </script>
     <script src="sketch.js"></script>
