--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     
     <script>function Help(){
-            window.open(https://endonian92.github.io/help.html);
+            window.open("https://endonian92.github.io/help.html");
         }
       </script>
       <input type="button" value="Help" onClick="Help()">
