--- a/help.html
+++ b/help.html
@@ -1,6 +1,11 @@
 <html>
 <head>
   <title>ラインの守り</title>
+  <style>
+    bosy{
+      background-color : black;
+      color : yellow;
+    }
   </head>
 <body>
 <t1>＜操作方法＞</t1>
