--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>スターリングラード</title>
     <style>
     body{
-        background-color : #00f0fa;
+        background-color : rgba(0,241,251,0.5);
     </style>
 
   </head>
