--- a/testing.html
+++ b/testing.html
@@ -20,6 +20,7 @@
 </head>
 <html>
   <body>
+    <p>testing</p>
     <input type="text" id="sentence">
     <input type="button" value="送信" onClick="func()">
   </body>
