--- a/testing.html
+++ b/testing.html
@@ -16,6 +16,7 @@
   }
   $.get("https://ipinfo.io", function(res) {
        var ip = res.ip;
+       console.log(ip);
   }, "jsonp");
 </head>
 <html>
