--- a/testing.html
+++ b/testing.html
@@ -22,7 +22,9 @@
 <html>
   <body>
     <p>testing</p>
+    <form>
     <input type="text" id="sentence">
     <input type="button" value="送信" onClick="func()">
+    </form>
   </body>
 </html>
