--- a/ブロック崩し.html
+++ b/ブロック崩し.html
@@ -26,8 +26,14 @@
                     ctx.fill();
                 }
             };
-
-            ball.draw();
+            function draw(){
+                ctx.clearRect(0,0, canvas.width, canvas.height);
+                ball.draw();
+                ball.x += ball.vx;
+                ball.y += ball.vy;
+                //raf = window.requestAnimationFrame(draw);
+            }
+            setInterval(draw,16);
         </script>
     </dv1>
 </body>
