--- a/ブロック崩し.html
+++ b/ブロック崩し.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <title>ブロック崩し</title>
+    <style>
+    	* { padding: 0; margin: 0; }
+    	canvas { background: #eee; display: block; margin: 0 auto; }
+    </style>
 </head>
 <body>
     <h1>ブロック崩し</h1>
