--- a/ブロック崩し.html
+++ b/ブロック崩し.html
@@ -40,9 +40,10 @@
                 if (ball.y + ball.vy > canvas.height ||ball.y + ball.vy < 0) {
                     ball.vy = -ball.vy;
                     if(ball.vy>0){
-                        ball.vy *= 1.011
+                        ball.vy *= 1.011;
                     }else if(ball.vy<0){
-                        ball.vy /= 0.99
+                        ball.vy /= 0.99;
+                    }
                 }
                 if (ball.x + ball.vx > canvas.width ||ball.x + ball.vx < 0) {
                     ball.vx = -ball.vx;
