--- a/ブロック崩し.html
+++ b/ブロック崩し.html
@@ -39,7 +39,7 @@
                 ball.y += ball.vy;
                 if (ball.y + ball.vy > canvas.height ||ball.y + ball.vy < 0) {
                     ball.vy = -ball.vy;
-                    if(ball.vy>0){
+                    if(ball.vy>0 && ball.vy<=80){
                         ball.vy *= 1.3;
                     }else if(ball.vy<0){
                         ball.vy /= 0.77;
