--- a/ブロック崩し.html
+++ b/ブロック崩し.html
@@ -38,7 +38,7 @@
                 width: 40,
                 height: 17,
                 vx: 10,
-                color: 'blue'
+                color: 'blue',
                 draw: function() {
                     ctx.beginPath();
                     ctx.fillRect(this.x, this.y, this.width, this.height);
