--- a/ブロック崩し.html
+++ b/ブロック崩し.html
@@ -41,7 +41,10 @@
                 color: 'blue',
                 draw: function() {
                     ctx.beginPath();
-                    ctx.fillRect(this.x, this.y, this.width, this.height);
+                    ctx.strokeRect(this.x, this.y, this.width, this.height);
+                    ctx.closePath();
+                    ctx.fillStyle = this.color;
+                    ctx.fill();
                 }
             }
             function draw(){
