--- a/ブロック崩し.html
+++ b/ブロック崩し.html
@@ -55,11 +55,11 @@
                 ball.y += ball.vy;
                 if (ball.y + ball.vy > canvas.height ||ball.y + ball.vy < 0) {
                     ball.vy = -ball.vy;
-                    if(ball.vy>0 && ball.vy<=80){
+                    /*if(ball.vy>0 && ball.vy<=80){
                         ball.vy *= 1.3;
                     }else if(ball.vy<0){
                         ball.vy /= 0.77;
-                    }
+                    }*/
                 }
                 if (ball.x + ball.vx > canvas.width ||ball.x + ball.vx < 0) {
                     ball.vx = -ball.vx;
